# crpgengine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CREDITS.md  LICENSE  Makefile  README.md  TODOS  cjrpgengine.cbp  clang.sh  cmake_install.cmake  config-test.yaml  config.yaml  main.c  player.c  run  scene.c  sprite.c  tests-with-coverage.sh
.github/workflows/: test.yaml
examples/simple_demo/: beastiary.yaml  config.yaml  items.yaml  player.yaml  spells.yaml  ui.yaml  user_config.yaml
examples/simple_demo/animations/: fireas.yaml  generic-villager.yaml  sleep-bubble.yaml
examples/simple_demo/player/: mobs.yaml  new-player.yaml  start_party.yaml
examples/simple_demo/player/mobiles/: fireas.yaml  heidall.yaml  isah.yaml  khan.yaml
examples/simple_demo/scenes/greenforest/: scene.yaml
examples/simple_demo/scenes/greenforest/map/: tilemap.tmx
examples/simple_demo/scenes/large_map/: scene.yaml
examples/simple_demo/scenes/tinytown/: scene.yaml
examples/simple_demo/scenes/tinytown/map/: tilemap.tmx
examples/simple_demo/scenes/tinytown/mobiles/: vill1.yaml  vill2.yaml
examples/simple_demo/scenes/tinytown/storylines/: from_the_past.yaml  mob2_dialog.yaml  test-pause-change-direction.yaml  test-sleep.yaml  test_pauses_between_actions.yaml  test_sleeping.yaml  test_storyline_features.yaml
examples/simple_demo/spritesheets/: fireas.yaml  sleep-bubble.yaml  tinytown.yaml  uipack.yaml
examples/simple_demo/tilesets/: tinytown.tsx
examples/tinytown/: config.txt  index.txt  music.txt  player.txt  player.yaml  scenes.txt  tinytown.scene
examples/tinytown/animations/: fireas.txt  fireas.yaml
examples/tinytown/audio/: music.yaml
examples/tinytown/greenforest/: scene.txt  tilemap.tmx
examples/tinytown/scenes/greenforest/: scene.txt  scene.yaml  tilemap.tmx
examples/tinytown/scenes/greenforest/map/: tilemap.tmx
examples/tinytown/scenes/tinytown/: scene.txt  scene.yaml  storylines.yaml  tilemap.tmx
examples/tinytown/scenes/tinytown/map/: tilemap.tmx
examples/tinytown/scenes/tinytown/mobiles/: vill1.txt  vill1.yaml  vill2.yaml
examples/tinytown/scenes/tinytown/mobs/: vill1.txt
examples/tinytown/scenes/tinytown/storylines/: from_the_past.yaml
examples/tinytown/sounds/: town.txt
examples/tinytown/tinytown/: scene.txt  tilemap.tmx  tileset.tsx  tinytown.tmx
fixtures/: ui.yaml
fixtures/animations/: fireas.yaml
fixtures/player/: items.yaml  start_party.yaml
fixtures/player/mobiles/: isah.yaml  khan.yaml
fixtures/spritesheets/: tinytown.yaml
resources/: firstdungeon.scene  firsttown.scene
resources/animations/: fireas.txt
resources/tiled/: dungeon1.tmx  firsttown.tmx  firsttown_Background.csv  firsttown_Midground.csv  greenforest.tsx  tinytown.tsx
scenes/: test.txt
src/: action.c  action_type.c  anim.c  animation.c  attributes.c  audio.c  avatar.c  beastiary.c  config.c  context.c  control.c  control_block.c  control_manager.c  cyaml.c  db.c  direction.c  draw.c  draw_fight.c  dump.c  exploration.c  fight.c  fight_manager.c  fight_manager_test.c  fight_test.c  font.c  game.c  game.h  global_setup.c  header.h  instance.c  intent.c  item.c  item_manager.c  layer.c  log.c  main.c  map.c  map_input_handler.c  menu.c  menu_list.c  (+38 more)
src/graphics/: animation.c  animation_manager.c  avatar.c  avatar.h  draw_fight.c  draw_map.c  font.c  spritesheet.c  spritesheet_manager.c  tilemap.c  window.c
src/graphics/ui/: menu.c  menu.h  menu_type.c  ui.c  ui_manager.c  ui_type.c
src/graphics/ui/menus/: acknowledge_menu.c  items_menu.c  load_menu.c  magic_menu.c  main_menu.c  party_apply_menu.c  party_item_consume_menu.c  party_menu.c  party_select_menu.c  quit_menu.c  shop_menu.c
src/graphics/ui/menus/fight/: action_select_menu.c  beast_list_menu.c  beast_list_menu.h  beast_target_menu.c  (+5 more)
src/header/: animation.h  control.h  db.h  errors.h  exit.h  exploration.h  fight.h  intent.h  item.h  layer.h  log.h  menu.h  notification.h  player.h  scene.h  ui.h
src/headers/: action.h  action_enums.h  action_type.h  all_menus.h  animation.h  attributes.h  audio.h  beastiary.h  collision.h  config.h  constants.h  context.h  control.h  control_manager.h  db.h  direction.h  draw_fight.h  errors.h  exploration.h  fight.h  fight_manager.h  fight_manager_test.h  fight_test.h  game.h  global_setup.h  globals.h  intent.h  item.h  layer.h  log.h  main.h  map.h  map_input_handler.h  menu.h  menu_type.h  menus.h  mobile.h  mobile_manager.h  mobile_test.h  notification.h  (+21 more)
src/headers/graphics/: animation.h  animation_manager.h  avatar.h  draw_fight.h  draw_map.h  spritesheet.h  spritesheet_manager.h
src/headers/graphics/ui/: menu.h  menu_type.h  ui.h
src/headers/persistence/: cyaml.h  cyaml_config.h  db.h  load_config.h  loader.h  scene_xml.h  xmlparser.h
src/headers/persistence/yaml/: config.h
src/headers/util/: log.h  runtime_args.h  test_util.h  util.h
src/menu/: acknowledge_menu.c  action_select_menu.c  attack_fight_menu.c  beast_list_menu.c  beast_select_menu.c  beast_target_menu.c  fight_mob_select_menu.c  items_menu.c  load_menu.c  magic_fight_menu.c  main_in_game.c  mob_select_menu.c  mobile_select_menu.c  mobile_target_menu.c  party_item_consume_menu.c  party_menu.c  quit_menu.c  save_menu.c
src/menu/fight/: action_select_menu.c  beast_target_menu.c  item_select_menu.c  magic_select_menu.c  mobile_select_menu.c  mobile_target_menu.c
src/persistence/: cyaml.c  cyaml_config.c  db.c  load_config.c  loader.c  scene_xml.c  xmlparser.c
src/persistence/yaml/: animation.c  attributes.c  beastiary.c  config.c  item.c  item_reference.c  mobile.c  music.c  new_player.c  player.c  save.c  scene.c  shop.c  sound.c  spell.c  spritesheet.c  start_party.c  storyline.c  ui.c  user_config.c
src/util/: dump.c  global_setup.c  log.c  runtime_args.c  runtime_args.h  test_util.c  util.c  validate.c
src/yaml/: animation.c  attributes.c  beastiary.c  config.c  item.c  item_reference.c  mobile.c  mobile2.c  music.c  player.c  player_item.c  save.c  scene.c  sound.c  spell.c  spritesheet.c  start_party.c  storyline.c  ui.c
(+31 files in other folders)
